<resources>
    <string name="app_name">Bazaar</string>
    <string name="action_settings">Settings</string>
    <string name="label_login_title">Sign in</string>
    <string name="label_login_email">Email</string>
    <string name="label_login_password">Password</string>
    <string name="button_login_login">Login</string>
    <string name="message_login_forgot">Forgot your password?</string>
    <string name="button_login_facebook">Sign in with Facebook</string>
    <string name="button_login_twitter">Sign in with Twitter</string>
    <string name="button_login_google">Sign in with Google</string>
</resources>
