<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_title"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_login_email"
            android:layout_marginTop="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_login_password"
            android:layout_marginTop="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gris"
                android:clickable="true"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="30dp"
                    android:maxWidth="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_user" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:paddingRight="30dp"
                    android:gravity="center"
                    android:text="@string/button_login_login"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_login_forgot"
                android:layout_gravity="center_vertical"
                android:padding="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:clickable="true"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_facebook" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:text="@string/button_login_facebook"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:clickable="true"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_twitter" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:text="@string/button_login_twitter"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:clickable="true"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_facebook" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:text="@string/button_login_google"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>